Add initial implementation of WellWise parser with DLIS support
- Created wellwise_parser.py for processing DLIS files and extracting data.
- Added parsers for DLIS format in parsers/dlis.py.
- Introduced environment configuration in .env-example and updated .gitignore.
- Updated requirements.txt with necessary dependencies.
- Created schema files for canonical data structure and Cassandra table.
- Implemented logging and error handling for robust file processing.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
- 
+# Core dependencies
+python-dotenv
+dlisio
+
+# Progress tracking
+tqdm==4.66.1
+
+# Data processing
+numpy
+pandas
+
+# Logging and utilities
+structlog
