--- a/.env-example
+++ b/.env-example
@@ -16,4 +16,10 @@ ASTRA_DB_COLLECTION=oil_gas_documents
 # Environment (optional, defaults to "production")
 ENVIRONMENT=production
 
+#OPENAI_API_KEY
 OPENAI_API_KEY=
+
+#DATA Files Directory
+DATA_DIRECTORY=
+PARSED_DIRECTORY=
+
