--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+parsed_data/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -136,3 +137,4 @@ dmypy.json
 .Trashes
 ehthumbs.db
 Thumbs.db 
+~/.uv/uv.toml
