base checkin after the mess

--- a/.env-example
+++ b/.env-example
@@ -12,6 +12,7 @@ ASTRA_DB_KEYSPACE=default_keyspace
 
 # Astra DB Collection
 ASTRA_DB_COLLECTION=oil_gas_documents
+ASTRA_TABLE_NAME=
 
 # Environment (optional, defaults to "production")
 ENVIRONMENT=production
@@ -23,3 +24,4 @@ OPENAI_API_KEY=
 DATA_DIRECTORY=
 PARSED_DIRECTORY=
 
+LOG_LEVEL=DEBUG
