DLIS parser implementation completed

--- a/.env-example
+++ b/.env-example
@@ -12,7 +12,7 @@ ASTRA_DB_KEYSPACE=default_keyspace
 
 # Astra DB Collection
 ASTRA_DB_COLLECTION=oil_gas_documents
-ASTRA_TABLE_NAME=
+ASTRA_TABLE_NAME=petro_data
 
 # Environment (optional, defaults to "production")
 ENVIRONMENT=production
@@ -25,3 +25,8 @@ DATA_DIRECTORY=
 PARSED_DIRECTORY=
 
 LOG_LEVEL=DEBUG
+
+#PARALLEL PROCESSING CONTROL VALUES
+MAX_WORKERS=
+RETRY_ATTEMPTS=
+TIMEOUT_SECONDS=
