LAS parser completed

--- a/.env-example
+++ b/.env-example
@@ -20,6 +20,12 @@ ENVIRONMENT=production
 #OPENAI_API_KEY
 OPENAI_API_KEY=
 
+#OPENAI EMBEDDING MODEL
+EMBED_MODEL=text-embedding-ada-002
+
+#OPENAI CHAT COMPLETION MODEL
+CHAT_COMPLETION_MODEL=gpt-4o
+
 #DATA Files Directory
 DATA_DIRECTORY=
 PARSED_DIRECTORY=
