fix environment paths

--- a/.env-example
+++ b/.env-example
@@ -29,6 +29,7 @@ CHAT_COMPLETION_MODEL=gpt-4o
 #DATA Files Directory
 DATA_DIRECTORY=
 PARSED_DIRECTORY=
+UNST_PARSED_DATA_DIR=
 
 LOG_LEVEL=DEBUG
 
