--- a/.env-example
+++ b/.env-example
@@ -1,39 +1,26 @@
-# Astra DB Configuration
-# Replace these values with your actual Astra DB credentials
-
-# Astra DB API Endpoint (e.g., https://your-database-id-us-east1.apps.astra.datastax.com)
+# Database Configuration
 ASTRA_DB_API_ENDPOINT=
-
-# Astra DB Application Token
 ASTRA_DB_TOKEN=
-
-# Astra DB Keyspace (optional, defaults to "oil_gas_data")
 ASTRA_DB_KEYSPACE=default_keyspace
-
-# Astra DB Collection
 ASTRA_DB_COLLECTION=oil_gas_documents
 ASTRA_TABLE_NAME=petro_data
 
-# Environment (optional, defaults to "production")
-ENVIRONMENT=production
-
-#OPENAI_API_KEY
+# OpenAI Configuration  
 OPENAI_API_KEY=
-
-#OPENAI EMBEDDING MODEL
 EMBED_MODEL=text-embedding-ada-002
-
-#OPENAI CHAT COMPLETION MODEL
 CHAT_COMPLETION_MODEL=gpt-4o
 
-#DATA Files Directory
+# Data Directories
 DATA_DIRECTORY=
-PARSED_DIRECTORY=
-UNST_PARSED_DATA_DIR=
+PARSED_DIRECTORY=structured_data
+UNST_PARSED_DATA_DIR=unstructured_data
 
+# Parser Configuration
+STRUCTURED_FILE_TYPES=.las,.dlis,.csv
+UNSTRUCTURED_FILE_TYPES=.pdf,.txt,.docx,.doc,.pptx,.xlsx,.html,.md,.png,.jpg,.jpeg
+
+# Processing Configuration
+MAX_WORKERS=4
+RETRY_ATTEMPTS=3
+TIMEOUT_SECONDS=300
 LOG_LEVEL=DEBUG
-
-#PARALLEL PROCESSING CONTROL VALUES
-MAX_WORKERS=
-RETRY_ATTEMPTS=
-TIMEOUT_SECONDS=
