--- a/.env-example
+++ b/.env-example
@@ -9,6 +9,7 @@ ASTRA_TABLE_NAME=petro_data
 OPENAI_API_KEY=
 EMBED_MODEL=text-embedding-ada-002
 CHAT_COMPLETION_MODEL=gpt-4o
+ASTRA_OPENAI_KEY_NAME=
 
 # Data Directories
 DATA_DIRECTORY=
