added dual processing

--- a/.env-example
+++ b/.env-example
@@ -19,6 +19,7 @@ UNST_PARSED_DATA_DIR=unstructured_data
 # Parser Configuration
 STRUCTURED_FILE_TYPES=.las,.dlis,.csv
 UNSTRUCTURED_FILE_TYPES=.pdf,.txt,.docx,.doc,.pptx,.xlsx,.html,.md,.png,.jpg,.jpeg
+DUAL_PROCESSING_FILE_TYPES=.dat
 
 # Processing Configuration
 MAX_WORKERS=4
