--- a/.env-example
+++ b/.env-example
@@ -20,6 +20,7 @@ UNST_PARSED_DATA_DIR=unstructured_data
 STRUCTURED_FILE_TYPES=.las,.dlis,.csv
 UNSTRUCTURED_FILE_TYPES=.pdf,.txt,.docx,.doc,.pptx,.html,.md,.png,.jpg,.jpeg
 DUAL_PROCESSING_FILE_TYPES=.dat,.xlsx
+SEGY_SAMPLE_INTERVAL=2500
 
 # Processing Configuration
 MAX_WORKERS=4
