--- a/.env-example
+++ b/.env-example
@@ -27,6 +27,7 @@ MAX_WORKERS=4
 RETRY_ATTEMPTS=3
 TIMEOUT_SECONDS=300
 LOG_LEVEL=DEBUG
+LOG_FILE_NAME=wellwise_parser.log
 
 # SEGY Parser Configuration
 SEGY_SAMPLE_SIZE=10000
