--- a/.env-example
+++ b/.env-example
@@ -5,11 +5,15 @@ ASTRA_DB_KEYSPACE=default_keyspace
 ASTRA_DB_COLLECTION=oil_gas_documents
 ASTRA_TABLE_NAME=petro_data
 
+# Environment (optional, defaults to "production")
+ENVIRONMENT=dev
+
 # OpenAI Configuration  
 OPENAI_API_KEY=
 EMBED_MODEL=text-embedding-ada-002
 CHAT_COMPLETION_MODEL=gpt-4o
 ASTRA_OPENAI_KEY_NAME=
+LOCAL_CHAT_COMPLETION_MODEL=llama3.1:8b
 
 # Data Directories
 DATA_DIRECTORY=
