--- a/.env-example
+++ b/.env-example
@@ -32,6 +32,7 @@ RETRY_ATTEMPTS=3
 TIMEOUT_SECONDS=300
 LOG_LEVEL=DEBUG
 LOG_FILE_NAME=wellwise_parser.log
+LLM_MAX_WORKERS=4
 
 # SEGY Parser Configuration
 SEGY_SAMPLE_SIZE=10000
